[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Coin.gd" type="Script" id=1]
[ext_resource path="res://Assets/Coin/coin/coin/gold_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Coin/coin/coin/gold_3 - Copie.png" type="Texture" id=3]
[ext_resource path="res://Assets/Coin/coin/coin/gold_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/sounds/powerUp2.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Coin/coin/coin/gold_2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Coin/coin/coin/gold_2 - Copie.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 45.2548

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "spin",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "Bounce"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -160 ), Vector2( 0, -64 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="Coin" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "spin"
frame = 4
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bounce = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="SoundCoinCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -3.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
